--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ if (password != 'mima')
 {alert("密码不正确,无法进入本站!!");
 window.opener=null; window.close();}  // 密码不正确就关闭
 //-->
-window.location="file:///C:/Users/chengnuo/Documents/GitHub/chengnuoblog.github.io/index.html";
+window.location="file:///C:/Users/chengnuo/Documents/GitHub/chengnuoblog.github.io/index1.html";
 </script>
 </head>
 </html>
