--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
+<script type="text/javascript">   
+function password() {   
+var testV = 1;   
+var pass1 = prompt('请输入密码','');   
+while (testV < 3) {   
+if (!pass1)   
+history.go(-1);   
+if (pass1 == "123") {//初始密码123   
+alert('密码正确');   
+break;   
+}   
+testV+=1;   
+var pass1 =   
+prompt('密码错误!请重新输入:');   
+}   
+if (pass1!="password" & testV ==3)   
+history.go(-1);   
+return " ";   
+}   
+document.write(password());   
+</script>  
+<!--下面添加你要显示的内容或者代码-->
 <!DOCTYPE HTML>
-<html>
-<head>
-<script language="JavaScript">
-<!--
-var password="";
-password=prompt('请输入密码 (本网站需输入密码才可进入):','');
-if (password != 'mima')
-   {alert("密码不正确,无法进入本站!!");
-    window.opener=null; window.close();}  // 密码不正确就关闭
-//-->
-</script>
-</head>
-</html>
 <html class="no-js" lang="zh-CN">
 
 	<head>
