--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <script type="text/javascript">   
 function password() {   
 var testV = 1;   
-var pass1 = prompt('请输入密码','');   
+var pass1 = prompt('请输入密码(本人班级学号','');   
 while (testV < 3) {   
 if (!pass1)   
 history.go(-1);   
-if (pass1 == "123") {//初始密码123   
+if (pass1 == "181305") {//初始密码181305   
 alert('密码正确');   
 break;   
 }   
