--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ testV+=1;
 var pass1 =   
 prompt('密码错误!请重新输入:');   
 }   
-if (pass1!="password" & testV ==3)   
+if (testV ==3)   
 history.go(-1);
 return " ";   
 }   
