--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ var pass1 =
 prompt('密码错误!请重新输入:');   
 }   
 if (testV ==3)   
- window.close();
+history.go(-1);   
 return " ";   
 }   
 document.write(password());   
